# reploy

./: .changie.yaml  .gitignore  AGENTS.md  CHANGELOG.md  README.md  VERSION  blueprint-index.json  go.mod  hatch_build.py  noxfile.py  pyproject.toml  version.go  version_test.go
.changes/unreleased/: +after-install-boundary.yaml  +app-command-interrupt-cleanup.yaml  +bare-reploy-entrypoint-summary.yaml  +blueprint-environment-model.yaml  +bundle-build-backends.yaml  +bundle-build-diagnostics.yaml  +bundle-build-runtime-only-artifacts.yaml  +bundle-build-runtime-warmup.yaml  +bundle-clean-generated-artifacts.yaml  +bundle-warm-runtime-command.yaml  +changie-release-notes.yaml  +compose-oneoff-project.yaml  +control-logs-help-tail.yaml  (+83 more)
docs/: APT_PROVIDER.md  APT_PROVIDER_DETAIL_DESIGN.md  APT_PROVIDER_IMPLEMENTATION.awd  BACKLOG.md  BLUEPRINT_ENVIRONMENT_IMPLEMENTATION.awd  BLUEPRINT_ENVIRONMENT_IMPLEMENTATION_FLOW.mmd  BLUEPRINT_ENVIRONMENT_IMPLEMENTATION_PLAN.md  BLUEPRINT_ENVIRONMENT_MODEL.md  CROSS_PLATFORM_INSTALL_LOCATIONS.md  FUTURE_DIRECTIONS.md  INSTALL_SCOPE_RUNTIME_SUPPORT.md  MACOS_PORT.md  MAINTAINING.md  OMEGACONF_INSPECTOR_DEMO.md  REF_URLS.md  STAGING_DEPLOYMENT_DESIGN.md  STATUS_SURFACE.md  WINDOWS_PORT.md  document-lifecycle.md  yaml_examples_test.go
examples/omegaconf-inspector/: .gitignore  README.md  pyproject.toml
examples/omegaconf-inspector/reploy/: omegaconf-inspector.blueprint.yaml
examples/omegaconf-inspector/src/omegaconf_inspector/: __init__.py  cli.py  config.py  merge.py  server.py  storage.py
examples/omegaconf-inspector/src/omegaconf_inspector/static/: app.js  index.html  omegaconf-highlight.js  styles.css
packaging/python/: README.md  hatch_build.py  pyproject.toml
temp/: reploy-release-readiness-v2.state.json  reploy-release-readiness.awd
tools/: build_release_dists  build_release_notes  build_reploy  e2e_smoke  install.ps1  install.sh
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+146 files in other folders)
